--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^4.3.2+2
   intl: ^0.16.1
   http: ^0.12.2
+  shared_preferences: ^0.5.12+2
 
 dev_dependencies:
   flutter_test:
